# VoiceAccess

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
configs/: default.yaml
examples/: transcribe_audio.py
notebooks/: basic_usage.ipynb
scripts/: download_commonvoice.py
src/: __init__.py
src/api/: server.py
src/augmentation/: audio_augmentor.py
src/core/: asr_engine.py  config.py
src/evaluation/: evaluator.py
src/languages/: language_adapter.py
src/models/: base_model.py  conformer_model.py  wav2vec2_model.py  whisper_model.py
src/preprocessing/: audio_processor.py
